cursive-bootstrap/tests/ui/E-CON/E-CON-0032.cursive
// RUN: compile-fail
// DIAG: E-CON-0032
// SPEC: 8.9
// DESC: # block path is not shared

record Counter {
    value: i32
}

procedure not_shared(c: const Counter) -> () {
    # write c {  //~ ERROR E-CON-0032: # block path not shared
        let x: i32 = 0
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
